force-app/main/default/objects/Stage_Assessment__c/Stage_Assessment__c.object-meta.xml
<CustomObject>
    <description>This is the placeholder for the set of assessments done at a particular stage in the Application process.</description>
    <label>Stage Assessment</label>
    <nameField>
        <label>Stage Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>