force-app/main/default/objects/Stage_Assessment__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The application being assessed</description>
    <inlineHelpText>The application being assessed</inlineHelpText>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Stage Assessments</relationshipLabel>
    <relationshipName>Stage_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>