force-app/main/default/objects/Stage_Assessment__c/fields/Assessment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Stage__c</fullName>
    <label>Assessment Stage</label>
    <length>25</length>
    <type>Text</type>
</CustomField>