force-app/main/default/objects/Stage_Assessment__c/fields/Number_of_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assessments__c</fullName>
    <description>The number of assessments for this stage</description>
    <inlineHelpText>The number of assessments for this stage</inlineHelpText>
    <label>Number of Assessments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>