force-app/main/default/objects/Stage_Assessment__c/fields/Number_of_Assessments_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assessments_Accepted__c</fullName>
    <description>The number of assessments for this stage with outcome &#39;Accepted&#39;</description>
    <inlineHelpText>The number of assessments for this stage with outcome &#39;Accepted&#39;</inlineHelpText>
    <label>Number of Assessments Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>