force-app/main/default/objects/Stage_Assessment__c/fields/Number_of_Assessments_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assessments_Rejected__c</fullName>
    <description>The number of assessments for this stage with status &#39;Rejected&#39;</description>
    <inlineHelpText>The number of assessments for this stage with status &#39;Rejected&#39;</inlineHelpText>
    <label>Number of Assessments Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>