force-app/main/default/objects/Stage_Assessment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>The application stage to which this assessment belongs.</description>
    <inlineHelpText>The application stage to which this assessment belongs.</inlineHelpText>
    <label>Stage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>