force-app/main/default/objects/Stage_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Stage__c</columns>
    <columns>Assessment_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>